--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="main">
     <aside class="banner">
       <div class="banner__shelves shelves" aria-labelledby="shelves-title">
-        <h2 class="visually-hidden">Полки с товарами</h2>
+        <h2 id="shelves-title" class="visually-hidden">Полки с товарами</h2>
         <div class="shelves__item shelf shelf--1">
           <h3 class="shelf__title visually-hidden">Полка 1</h3>
           <div
@@ -76,7 +76,7 @@
             <img src="./images/shelf-3/pineapple.svg" alt="" />
           </div>
           <div
-            class="shelf__item item chicken"
+            class="shelf__item item banana"
             draggable="true"
             data-id="9"
             role="button">
@@ -100,7 +100,7 @@
       </div>
 
       <div class="banner__cart cart" aria-labelledby="cart-title">
-        <h2 class="visually-hidden">Корзина</h2>
+        <h2 id="cart-title" class="visually-hidden">Корзина</h2>
         <div class="cart__container"></div>
         <div class="cart__container"></div>
         <div class="cart__container"></div>
